[workspace]
members = ["client", "app"]

[package]
name = "vara-app"
version = "0.1.0"
edition = "2021"

[dependencies]
vara-sails = { path = "../sails-vara/vara-app/vara-sails" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vara-app-app = { path = "app" }
tokio = { version = "1.41", features = ["full"] }  # Add full tokio runtime support

[build-dependencies]
vara-app-app = { path = "app" }
sails-rs = { version = "0.7.1", features = ["wasm-builder"] }
sails-idl-gen = "0.7.1"

[dev-dependencies]
vara-app = { path = ".", features = ["wasm-binary"] }
vara-app-client = { path = "client" }
sails-rs = { version = "0.7.1", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
default = ["wasm-binary"]
