[package]
name = "vara-app-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.13.1", optional = true }
sails-rs = "0.7.1"

[build-dependencies]
vara-app-app = { path = "../app" }
sails-client-gen = "0.7.1"
sails-idl-gen = "0.7.1"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
